payments/kyverno-policies/latest-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: latest-test
  namespace: payments

spec:
  securityContext:
    runAsNonRoot: true

  containers:
  - name: nginx
    image: nginx:latest

    securityContext:
      runAsNonRoot: true
