payments/kyverno-policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-root-user

spec:

  validationFailureAction: Enforce

  rules:

  - name: require-run-as-non-root

    match:

      any:

      - resources:

          kinds:

          - Pod


    exclude:

      any:

      - resources:

          namespaces:

          - argocd

          - kyverno

          - ingress-nginx

          - kube-system


    validate:

      message: "Containers must run as non-root"

      pattern:

        spec:

          securityContext:

            runAsNonRoot: true
